# web-agent-runtime-bench

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_TOOLKIT_POLISH_REPORT.md  FAILURE_DIAGNOSIS_CLI_REPORT.md  GITHUB_PRIVATE_PUSH_REPORT.md  LICENSE  MANIFEST.in  POST_PUBLIC_VERIFICATION_REPORT.md  PUBLIC_RELEASE_CANDIDATE_AUDIT.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
demo/: README.md  run_demo.ps1
docs/: ACTIVE_PROBE_BOUNDARY.md  ADAPTER_ARTIFACT_FORMAT.md  AGENT_FRONTEND_INVOCATION.md  AIR_GAPPED_DEPLOYMENT.md  AI_HANDOFF_SAFETY_GATE.md  ANDROID_APK_ADAPTER.md  ANDROID_APPIUM_ORCHESTRATION.md  ANDROID_APP_PROFILE.md  ANDROID_BUSINESS_DATA_BINDING.md  ANDROID_BUSINESS_WORKFLOW_TEMPLATES.md  ANDROID_COMPATIBILITY_REPORT.md  ANDROID_DEVICE_LEASE_AND_RECOVERY.md  ANDROID_DEVICE_MATRIX.md  ANDROID_FAILURE_REPLAY_PACK.md  ANDROID_FLAKY_FLOW_DETECTION.md  ANDROID_FLOW_TEMPLATE_LIBRARY.md  ANDROID_LOCATOR_REGISTRY.md  ANDROID_LOCATOR_SELF_HEALING.md  ANDROID_MUTATION_GUARD.md  ANDROID_OPS_DASHBOARD.md  ANDROID_PAGE_OBJECT_GENERATOR.md  ANDROID_PRODUCTION_HARDENING.md  ANDROID_PRODUCTION_RUNBOOK.md  ANDROID_REAL_APK_ONBOARDING.md  ANDROID_REAL_DEVICE_FARM.md  ANDROID_REAL_DEVICE_REPLAY.md  ANDROID_SAFETY_BOUNDARY_v5.2.md  ANDROID_STABILITY_SCORE.md  ANDROID_TASK_QUEUE.md  ANDROID_UI_TREE_DIFF.md  ANDROID_WORKFLOW_SCHEDULER.md  ANONYMIZATION_POLICY.md  ANTI_BOT_RISK_BOUNDARY.md  API_AUTOMATION_ADAPTERS.md  APPLIED_SCENARIO_DEMOS.md  AUTO_COLLECTOR.md  BACKUP_RESTORE.md  BACKWARD_COMPATIBILITY_POLICY.md  BAIDU_OCR_PROVIDER_SETUP.md  BATCH_DIAGNOSIS.md  (+173 more)
examples/: README.md  mock_script_fails.py
failure_doctor/: __init__.py  agent_invocation.py  ai_handoff.py  auto_collect.py  batch.py  cli.py  run_capture.py  sanitize_share.py
integrations/: __init__.py  _pack.py
knowledge_base/: README.md  index.json
public_failure_corpus/: README.md  findings.md  schema.json  sources.md
sample_reports/: benchmark_ci_report_sample.md  capability_dashboard_sample.md  failure_replay_sample.md  phase_5_1_freeze_summary.md  phase_5_2_a0_runtime_demo_summary.md  phase_5_2_a1_runtime_variants_summary.md  phase_5_2_a2_bundle_variants_summary.md  phase_5_2_a3_signed_api_benchmark_summary.md  public_release_readiness_summary.md  safety_audit_summary.md
schemas/: action_grounding_report.schema.json  ai_handoff_safety.schema.json  android_app_profile.schema.json  android_appium_orchestration.schema.json  android_business_data_binding.schema.json  android_business_preview.schema.json  android_business_template.schema.json  android_business_workflow_pack.schema.json  android_compatibility_report.schema.json  android_data_mapping.schema.json  android_device.schema.json  android_device_farm.schema.json  android_device_health.schema.json  android_device_inventory.schema.json  android_device_lease.schema.json  android_device_matrix.schema.json  android_diagnosis.schema.json  android_diagnostic_bundle.schema.json  android_failure_replay_pack.schema.json  android_flaky_flow_report.schema.json  android_flow.schema.json  android_flow_compiled.schema.json  android_flow_draft.schema.json  android_flow_lint.schema.json  android_golden_snapshot.schema.json  android_human_review_request.schema.json  android_lab_workspace.schema.json  android_locator.schema.json  android_locator_candidate.schema.json  android_locator_registry.schema.json  android_manual_review.schema.json  android_media_task.schema.json  android_mutation_guard.schema.json  android_ops_metrics.schema.json  android_ops_task_queue.schema.json  android_page_model.schema.json  android_pilot_project.schema.json  android_playbook.schema.json  android_real_device_replay.schema.json  android_recording_session.schema.json  (+50 more)
scripts/: adapt_smoke_test.ps1  build_pypi_package.ps1  diagnosis_smoke_test.ps1  local_safety_scan.ps1  make_release_archive.py  smoke_test.ps1  validate_external_heldout.py  validate_website_antibot.py
tests/: test_agent_bootstrap_enterprise_governance.py  test_agent_frontend_invocation.py  test_ai_handoff_patch_proposal.py  test_android_apk_adapter.py  test_android_mobile_stable_v54_v60.py  test_android_ops_v53.py  test_android_production_hardening.py  test_applied_scenario_safety.py  (+133 more)
(+3759 files in other folders)
