[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-failure-doctor"
version = "0.4.1"
description = "Local-first diagnostics for AI browser automation, Playwright, and RPA failures."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Agent Failure Doctor maintainers" }
]
keywords = [
  "playwright",
  "browser-automation",
  "rpa",
  "diagnostics",
  "agent-debugging"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]

[project.scripts]
failure-doctor = "failure_doctor.cli:main"
trace-doctor = "trace_doctor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "failure_doctor*",
  "trace_doctor*",
  "tools*",
]
