[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-failure-doctor"
version = "1.2.0"
description = "Local-first failure diagnosis for AI browser automation, Playwright, crawler, and RPA runs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "sida lin" }
]
keywords = [
  "playwright",
  "browser automation",
  "ai agent",
  "crawler",
  "rpa",
  "debugging",
  "failure diagnosis"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]

[project.scripts]
failure-doctor = "failure_doctor.cli:main"
trace-doctor = "trace_doctor.cli:main"

[project.urls]
Homepage = "https://github.com/tobybgy-lsd/web-agent-runtime-bench"
Repository = "https://github.com/tobybgy-lsd/web-agent-runtime-bench"
Issues = "https://github.com/tobybgy-lsd/web-agent-runtime-bench/issues"

[project.optional-dependencies]
trace-gen = ["playwright>=1.45"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "failure_doctor*",
  "trace_doctor*",
  "integrations*",
  "tools*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
